<resources>
    <string name="app_name">Pizza App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="recipe_master">RecipeMaster</string>
    <string name="pizza_not_ready">Pizza details are not ready yet</string>
    <string name="pizza_recipe">Pizza recipe!</string>
    <string name="pizza_title">Pizza:</string>
    <string name="ingredients_title">Ingredients:</string>
    <string name="preparing_title">Preparing:</string>
    <string name="images_title">Images:</string>
    <string name="get_recipe">Get the recipe</string>
    <string name="zaloguj_przez_fb">Zaloguj przez Facebooka</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="facebook_app_id">439126857092358</string>
    <string name="fb_login_protocol_scheme">fb439126857092358</string>

</resources>