<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!--        <com.google.android.material.appbar.AppBarLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:theme="@style/Theme.PizzaApp.AppBarOverlay">-->

    <!--        <androidx.appcompat.widget.Toolbar-->
    <!--            android:id="@+id/toolbar"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="?attr/actionBarSize"-->
    <!--            android:background="?attr/colorPrimary"-->
    <!--            app:popupTheme="@style/Theme.PizzaApp.PopupOverlay" />-->

    <!--        </com.google.android.material.appbar.AppBarLayout>-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pizza_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_image_placeholder"
        android:visibility="gone"
        app:civ_border_color="#FF000000"
        app:civ_border_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/titleMaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_master"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/shadowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:background="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/fabRecipeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fabFacebookView"
        app:layout_constraintEnd_toEndOf="@+id/fabMain"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_boarder"
            android:elevation="16dp"
            android:text="@string/get_recipe"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dots"
            android:tint="@android:color/white"

            app:backgroundTint="@color/colorFAB2"
            app:elevation="6dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/fabFacebook"
            app:layout_constraintEnd_toEndOf="@+id/fabMain"
            app:layout_constraintStart_toStartOf="@+id/fabMain"
            app:maxImageSize="24dp"
            app:pressedTranslationZ="12dp"
            app:rippleColor="#FFFFFF"
            app:tint="@android:color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/fabFacebookView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fabMain"
        app:layout_constraintEnd_toEndOf="@+id/fabMain"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_boarder"
            android:elevation="16dp"
            android:text="@string/zaloguj_przez_fb"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorFAB1"
            app:elevation="6dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/fabMain"
            app:layout_constraintEnd_toEndOf="@+id/fabMain"
            app:layout_constraintStart_toStartOf="@+id/fabMain"
            app:maxImageSize="24dp"
            app:pressedTranslationZ="12dp"
            app:tint="@android:color/white"
            tools:visibility="visible" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorAccent"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:tint="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>